Ultimos detalles de vista mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1163,13 +1163,37 @@ li .icon-check {
     width: 40px; 
     height: auto; 
     vertical-align: middle; 
-    margin-left: 50px; 
+    margin-left: 70px; 
 }
 li .icon-check-hospedaje{
     width: 40px; 
     height: auto; 
     vertical-align: middle; 
     margin-left: 26px;
+}
+li .icon-check-empgrandes-hospedaje{
+    width: 40px; 
+    height: auto; 
+    vertical-align: middle; 
+    margin-left: 64px;
+}
+li .icon-check-mdnpequeña{
+    width: 40px; 
+    height: auto; 
+    vertical-align: middle; 
+    margin-left: 50px;
+}
+li .icon-check-mdnfuncional{
+    width: 40px; 
+    height: auto; 
+    vertical-align: middle; 
+    margin-left: 50px;
+}
+li .icon-check-multibilingue{
+    width: 40px; 
+    height: auto; 
+    vertical-align: middle; 
+    margin-left: 50px;
 }
 li .icon-check-info{
     width: 40px; 
@@ -1196,6 +1220,24 @@ li .icon-check-info{
     padding: 5px;
 }
 /* CARD DE EMPRESAS GRANDES O CORPORATIVOS */
+li .icon-check-empgrandes{
+    width: 40px; 
+    height: auto; 
+    vertical-align: middle; 
+    margin-left: 70px;
+}
+li .icon-check-empgrandes-bilingue{
+    width: 40px; 
+    height: auto; 
+    vertical-align: middle; 
+    margin-left: 124px;
+}
+li .icon-check-empgrnd{
+    width: 40px; 
+    height: auto; 
+    vertical-align: middle; 
+    margin-left: 20px;
+}
 #empresas-grandes{
     width: 800px;
 }
@@ -1572,7 +1614,6 @@ li .icon-check-info{
     /* Ajuste del botón */
     .pricing-card .cta-button {
         display: block;
-        font-size: 1.8rem;
         width: 100%;
         background-color: #343a40;
         padding: 12px;
@@ -1580,16 +1621,22 @@ li .icon-check-info{
         text-align: center;
         text-decoration: none;
         border-radius: 5px;
-        margin-top: 20px;
+        margin-top: 2px;
     }
     
     .pricing-card .cta-button:hover {
         background: #1f2333;
     }
+    #negocios-pequeños .icon-check-mdnpequeña{
+        margin-left: 41px;
+    }
+    #e
     #empresas-medianas h2{
         font-size: 2rem;
     }
-
+    #empresas-medianas .icon-check{
+        margin-left: 54px;
+    }
     #empresas-grandes {
         width: 100%;
     }
@@ -1603,7 +1650,19 @@ li .icon-check-info{
         font-size: 1.2rem;
     }
     #empresas-grandes .cta-button{
-        font-size: 1.2rem;
+        font-size: 1.9rem;
+    }
+    #empresas-grandes .icon-check-empgrandes-hospedaje{
+        margin-left: 12px;
+    }
+    #empresas-grandes .icon-check-empgrandes{
+        margin-left: 12px;
+    }
+    #empresas-grandes .icon-check-empgrandes-bilingue{
+        margin-left: 43px;
+    }
+    #empresas-grandes .icon-check-empgrnd{
+        margin-left: 25px;
     }
     li .icon-check-hospedaje{
         margin-left: 20px;
@@ -1627,6 +1686,9 @@ li .icon-check-info{
     li .icon-check-empgrnd{
         margin-right: 3px;
         margin-left: 20px;
+    }
+    .portafolio-container{
+        gap: 60px;
     }
 
 }
