--- a/sitio_web_psicologa/assets/css/main.css
+++ b/sitio_web_psicologa/assets/css/main.css
@@ -22,7 +22,8 @@
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #212529; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #32353a; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #ffafcc; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --accent-color: #41CBAE;
+  /*--accent-color: #ffafcc; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
@@ -30,11 +31,12 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #3a3939;  /* The default color of the main navmenu links */
-  --nav-hover-color: #ffafcc; /* Applied to main navmenu links when they are hovered over or active */
+   --nav-hover-color: #41CBAE;
+  /*--nav-hover-color: #ffafcc; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #3a3939; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #e84545; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-dropdown-hover-color: #41CBAE; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -232,9 +234,9 @@ h6 {
   height: 100%;
   background-image: url('/sitio_web_psicologa/assets/img/logo_psicologia.jpg');
   background-size: contain;
-  background-position: 95% -42px;
+  background-position: 95% -47px !important;
   background-repeat: no-repeat;
-  opacity: 0.2; 
+  opacity: 0.2 !important; 
   z-index: 1;
   pointer-events: none; 
 }
@@ -245,6 +247,19 @@ h6 {
   z-index: 2; 
 }
 
+.sobre-mi{
+  margin-left: 10px;
+}
+
+.features .features-item .btn-get-started{
+  margin-left: 104px;
+}
+}
+
+@media (max-width: 320px) {
+  .section-title h2 {
+        font-size: 22px !important;
+    }
 }
 
 .scrolled .header {
@@ -266,7 +281,7 @@ h6 {
   --background-color: #ffffff;
   --heading-color: #32353a;
   --nav-color: #3a3939;
-  --nav-hover-color: #e84545;
+  --nav-hover-color: #41CBAE;
 }
 
 /*--------------------------------------------------------------
@@ -1004,7 +1019,7 @@ section,
 
 .about .icon-box {
   background-color: var(--surface-color);
-  padding: 50px 40px;
+  padding: 20px 40px;
   box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   transition: all 0.3s ease-out 0s;
@@ -1042,7 +1057,7 @@ section,
 
 .about .icon-boxes .col-md-6:nth-child(2) .icon-box,
 .about .icon-boxes .col-md-6:nth-child(4) .icon-box {
-  margin-top: -40px;
+  margin-top: 2px;
 }
 
 @media (max-width: 768px) {
