--- a/gisea_regalos/styles/responsive.css
+++ b/gisea_regalos/styles/responsive.css
@@ -433,7 +433,7 @@
 {
 	.logo_container a
 	{
-		font-size: 12px;
+		font-size: 25px;
 	}
 	.hamburger_container
 	{
@@ -441,7 +441,7 @@
 	}
 	.hamburger_container i
 	{
-		font-size: 16px;
+		font-size: 30px;
 	}
 	.hamburger_close
 	{
@@ -463,13 +463,13 @@
 	}
 	.menu_item > a
 	{
-		font-size: 12px;
+		font-size: 20px;
 		line-height: 35px;
 		height: 35px;
 	}
 	.menu_selection li a
 	{
-		font-size: 12px;
+		font-size: 16px;
 		line-height: 35px;
 		height: 35px;
 	}
@@ -516,7 +516,7 @@
 	}
 	.banner_item
 	{
-		height: calc((100vw - 30px) / 2.6);
+		height: calc((163vw - 25px) / 2.6);
 	}
 	.grid_sorting_button
 	{
@@ -592,6 +592,25 @@
 	.product_slider_item .product-item .product_info
 	{
 		padding-bottom: 30px;
+	}
+	.product_image img {
+		width: 100%;
+		height: 28vh;         /* Ajusta el alto según tu preferencia */
+		object-fit: contain;  /* O usa cover si prefieres recorte */
+		padding: 5px;         /* Menos padding para móviles */
+		background: #F4F2F0;
+		display: block;
+		margin: 0 auto;
+	}
+	.product_image {
+		height: auto;
+		min-height: 30vh;     /* Asegura espacio para la imagen */
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.product-item {
+		margin-bottom: 20px;  /* Espacio entre productos */
 	}
 	.blog_title
 	{
