--- a/template_boda/css/style.css
+++ b/template_boda/css/style.css
@@ -229,8 +229,9 @@
 .display-4,
 .display-5,
 .display-6 {
-    font-family: 'Great Vibes', cursive;
-    font-weight: 700;
+    font-family: "Petit Formal Script", cursive;
+    font-weight: 200;
+    font-size: 1.3rem;
 }
 
 
@@ -659,7 +660,7 @@
     }
 
     .wedding-names {
-        font-size: 2.2rem !important;
+        font-size: 3rem !important;
     }
 
     .wedding-names .wedding-heart {
@@ -694,7 +695,7 @@
 
     .asistencia-titulo h4 {
         text-align: center !important;
-        font-size: 1rem;
+        font-size: 1.3rem;
         letter-spacing: 2px !important;
     }
 
