--- a/sitio_web_psicologa/assets/css/main.css
+++ b/sitio_web_psicologa/assets/css/main.css
@@ -162,7 +162,7 @@ h6 {
 }
 
 .header .logo h1 {
-  font-size: 24px;
+  font-size: 20px;
   margin: 0;
   font-weight: 600;
   color: var(--heading-color);
@@ -200,7 +200,7 @@ h6 {
   .navmenu a,
   .navmenu a:focus {
     font-size: 14px !important;
-    padding: 18px 10px !important;
+    padding: 18px 8px !important;
   }
 
   .header .btn-getstarted {
@@ -691,7 +691,7 @@ h6 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/sitio_web_psicologa/assets/img/logo_psicologia.jpg');
+  background-image: url('../img/logo_psicologia.jpg');
   background-size: contain;
   background-position: 95% -49px;
   background-repeat: no-repeat;
